custom.css
/* @theme custom */

@import 'default';
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=News+Cycle&display=swap');

:root {
    padding: 2rem;
    padding-bottom: 4rem;
    font-family: 'Roboto', Helvetica, sans-serif;
    font-size: 28px;
}

/* section {
    background: rgb(247, 255, 254);
} */

section img {
    vertical-align: middle;
}

section.title {
    text-align: center;
    padding: 2rem;
}

section.profile {
    text-align: center;
}


h1 {
    font-size: 36pt;
    font-family: 'Ubuntu', Tahoma, sans-serif;
}

h2 {
    font-size: 28pt;
    color: darkslategrey;
}

/* Footnotes and captions*/
h5 {
    font-size: 14pt;
    font-weight: normal;
    position: absolute;
    bottom: 130px;
}

/* On-slide reference citations */
h6 {
    font-size: 14pt;
    font-family: 'News Cycle', 'Arial Narrow', sans-serif;;
    font-weight: normal;
    text-align: justify;
    position: absolute;
    bottom: 70px;
    width: 90%;
    line-height: 110%;
}

table {
    display: table;
}

a {
    color: cadetblue;
    
}
a:hover {
    text-decoration: none;
    color: slateblue;
}

footer {
    bottom: 0;
    width: 100%;
    height: 70px;
    text-align: left;
    background-color: white;
    padding: 1em;
}

/* Pagination */
section::after {
    bottom: -20px;
    height: 50px;
    font-size: 16pt;
    padding: 1em;
}

